changed margin to fix text overlap

--- a/wa/project/project.css
+++ b/wa/project/project.css
@@ -173,7 +173,7 @@ background-size: 300% 100%;
   /* border: 1px solid blue; */
   grid-column: 3/span 2;
   grid-row:2/ span 2;
-  margin:10px;
+  margin-left:10px;
  margin-top:0;
  
  }
